--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -18,7 +18,7 @@ jobs:
 
     - name: Install dependencies
       run: |
-        pip install -r backend/requirements.txt
+        pip install -r requirements.txt
 
   deploy:
     runs-on: ubuntu-latest
