--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -14,7 +14,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v5
       with:
-        python-version: '3.9'
+        python-version: '3.12'
 
     - name: Install dependencies
       run: |
@@ -28,7 +28,7 @@ jobs:
     - name: Login to Azure
       uses: azure/login@v2
       with:
-        creds: ${{ secrets.AZURE_CREDENTIALS }}  # Asegúrate de que el secreto esté bien configurado.
+        creds: ${{ secrets.AZURE_CREDENTIALS }}  
 
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
