--- a/requirements.txt
+++ b/requirements.txt
@@ -17,8 +17,7 @@ Jinja2==3.1.4
 MarkupSafe==2.1.5
 packaging==24.1
 passlib==1.7.4
-psycopg==3.2.2
-psycopg2==2.9.9
+psycopg2-binary==2.9.9
 pyasn1==0.6.1
 pycodestyle==2.12.1
 pycparser==2.22
@@ -34,6 +33,7 @@ starlette==0.38.5
 typing_extensions==4.12.2
 tzdata==2024.1
 uvicorn==0.30.6
+
 
 
 
